--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "JavaScript kit",
   "scripts": {
+    "start": "babel-node server.js",
     "webpack-devserver": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8090 --host 0.0.0.0"
   },
   "author": {
@@ -12,31 +13,40 @@
   },
   "dependencies": {
     "axios": "^0.15.1",
+    "bcrypt-as-promised": "^1.1.0",
+    "bluebird": "^3.5.0",
     "body-parser": "*",
-    "cors": "*",
+    "cors": "^2.8.3",
     "express": "*",
+    "jsonwebtoken": "^7.4.1",
     "mongoose": "*",
     "node-sass": "latest",
     "react": "latest",
     "react-dom": "latest",
     "react-redux": "latest",
+    "react-router": "^4.1.1",
+    "react-router-redux": "^4.0.8",
     "redux": "latest",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer-loader": "*",
-    "css-loader": "^0.22.0",
-    "file-loader": "^0.8.5",
-    "json-loader": "^0.5.4",
-    "sass-loader": "^*",
-    "react-hot-loader": "^1.3.0",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.6",
-    "babel": "5.x",
-    "babel-loader": "5.x",
+    "babel": "latest",
+    "babel-cli": "^6.24.1",
+    "babel-loader": "latest",
     "babel-preset-es2015": "latest",
     "babel-preset-react": "latest",
     "babel-preset-stage-0": "latest",
+    "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.22.0",
+    "express-session": "^1.15.3",
+    "file-loader": "^0.8.5",
+    "json-loader": "^0.5.4",
+    "morgan": "^1.8.2",
+    "react-hot-loader": "^1.3.0",
+    "sass-loader": "^*",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.3",
     "webpack-preset": "^0.2.0",
