--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-redux": "latest",
-    "react-router": "^4.1.1",
+    "react-router": "3.0.2",
     "react-router-redux": "^4.0.8",
     "redux": "latest",
     "whatwg-fetch": "^2.0.3"
